fix: Header blocking lightbox close on small scrns

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,15 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.uk-lightbox {
+  margin-top: 3em;
+  transition: margin-top 500ms ease-in;
+}
+
+@media screen and (min-width: 960px){
+  .uk-lightbox {
+    margin-top: 0em;
+    transition: margin-top 500ms ease-in;
+  }
+}
